[metadata]
name = testpkg
version = 1.0.0
author = Drew Rohskopf
author_email = drew.rohskopf@gmail.com
description = A simple Python package
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/rohskopf/testpkg
project_urls =
    Bug Tracker = https://github.com/rohskopf/testpkg/-/issues
    repository = https://github.com/rohskopf/testpkg
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
#package_dir =
#    = src
#packages = find:
packages = testpkg
python_requires = >=3.6

[options.packages.find]
#where = src